[gd_scene load_steps=45 format=3 uid="uid://yomfso6a61bt"]

[ext_resource type="Script" path="res://gameObjects/enemies/boss/boss.gd" id="1_gld56"]
[ext_resource type="Texture2D" uid="uid://cm2avfp3r6ji8" path="res://art/Boss/boss x1.png" id="1_ve2ab"]
[ext_resource type="Shader" path="res://gameObjects/enemies/enemy.gdshader" id="3_737go"]
[ext_resource type="AudioStream" uid="uid://cb1c4jf44tn77" path="res://sfx/SCI-FI_UI_SFX_PACK/Rings/Ring_Pitched_Up_1.wav" id="4_ju23g"]
[ext_resource type="AudioStream" uid="uid://c4qsfbdacxtru" path="res://sfx/Space_Ambience_and_Sound_Pack/Rocket/rocketShort.wav" id="5_q2jyb"]
[ext_resource type="AudioStream" uid="uid://on2xtwv1w3pe" path="res://sfx/Space_Ambience_and_Sound_Pack/Custom/impact_short.wav" id="6_n4cjv"]
[ext_resource type="AudioStream" uid="uid://y4tucfhbsfxn" path="res://gameObjects/resources/footsteps.tres" id="7_2yads"]
[ext_resource type="AudioStream" uid="uid://b0hi0n810cne1" path="res://sfx/SCI-FI_UI_SFX_PACK/Impacts/Impact_2_Reso.wav" id="8_wb6s4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3kogs"]
atlas = ExtResource("1_ve2ab")
region = Rect2(334, 36, 36, 28)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kjgsb"]
shader = ExtResource("3_737go")
shader_parameter/flash_white = false

[sub_resource type="AtlasTexture" id="AtlasTexture_1p7xq"]
atlas = ExtResource("1_ve2ab")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq7kc"]
atlas = ExtResource("1_ve2ab")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_43jis"]
atlas = ExtResource("1_ve2ab")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuy5q"]
atlas = ExtResource("1_ve2ab")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchl7"]
atlas = ExtResource("1_ve2ab")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ax3s"]
atlas = ExtResource("1_ve2ab")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cknq"]
atlas = ExtResource("1_ve2ab")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uw0k"]
atlas = ExtResource("1_ve2ab")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkc8g"]
atlas = ExtResource("1_ve2ab")
region = Rect2(512, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hevb2"]
atlas = ExtResource("1_ve2ab")
region = Rect2(640, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsjb1"]
atlas = ExtResource("1_ve2ab")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1liif"]
atlas = ExtResource("1_ve2ab")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnppi"]
atlas = ExtResource("1_ve2ab")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs6hj"]
atlas = ExtResource("1_ve2ab")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mwjm"]
atlas = ExtResource("1_ve2ab")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpigo"]
atlas = ExtResource("1_ve2ab")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik214"]
atlas = ExtResource("1_ve2ab")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_68tef"]
atlas = ExtResource("1_ve2ab")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_orlfd"]
atlas = ExtResource("1_ve2ab")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t01hq"]
atlas = ExtResource("1_ve2ab")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1mgv"]
atlas = ExtResource("1_ve2ab")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ccl"]
atlas = ExtResource("1_ve2ab")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5lp"]
atlas = ExtResource("1_ve2ab")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmfn8"]
atlas = ExtResource("1_ve2ab")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk1el"]
atlas = ExtResource("1_ve2ab")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o51k"]
atlas = ExtResource("1_ve2ab")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0je0s"]
atlas = ExtResource("1_ve2ab")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2kl5"]
atlas = ExtResource("1_ve2ab")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo7qi"]
atlas = ExtResource("1_ve2ab")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_np38n"]
atlas = ExtResource("1_ve2ab")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4n7b"]
atlas = ExtResource("1_ve2ab")
region = Rect2(448, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ynd6a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p7xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq7kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43jis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuy5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ax3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cknq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uw0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkc8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hevb2")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsjb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1liif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnppi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs6hj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mwjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpigo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik214")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68tef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orlfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t01hq")
}],
"loop": true,
"name": &"mega",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1mgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ccl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5lp")
}],
"loop": false,
"name": &"missile",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmfn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk1el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o51k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0je0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2kl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo7qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np38n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4n7b")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sdg4x"]
radius = 28.5
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_53d8d"]
radius = 11.0
height = 66.0

[node name="boss" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 32
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_gld56")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 18)
texture = SubResource("AtlasTexture_3kogs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_kjgsb")
sprite_frames = SubResource("SpriteFrames_ynd6a")
animation = &"walk"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 8)
shape = SubResource("CapsuleShape2D_sdg4x")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="playerRayCast" type="RayCast2D" parent="."]

[node name="shotTimer" type="Timer" parent="."]

[node name="stompBox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="stompBox"]
position = Vector2(1, 26)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_53d8d")
disabled = true

[node name="SFX" type="Node" parent="."]

[node name="hitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_ju23g")
max_distance = 1000.0
attenuation = -1.0
bus = &"SFX"

[node name="shootSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_q2jyb")
attenuation = -1.0
bus = &"SFX"

[node name="laserSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_n4cjv")
volume_db = -20.0
attenuation = -1.0
bus = &"SFX"

[node name="footstepSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_2yads")
attenuation = -1.0
bus = &"SFX"

[node name="deathSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("8_wb6s4")
volume_db = -10.0
attenuation = -1.0

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="body_entered" from="stompBox" to="." method="_on_stomp_box_body_entered"]
